sitio estatico terminado

--- a/index.html
+++ b/index.html
@@ -44,35 +44,33 @@
         <section id="projects" class="section">
             <div class="container">
                 <h2>Proyectos</h2>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <h3>Proyecto 1</h3>
-                        <p>Descripción breve del proyecto 1. Esto es una pequeña introducción al proyecto y lo que se logró.</p>
-                        <a href="#" class="btn-primary">Ver más</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Proyecto 2</h3>
-                        <p>Descripción breve del proyecto 2. Explicación sobre lo que este proyecto realizó y su impacto.</p>
-                        <a href="#" class="btn-primary">Ver más</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Proyecto 3</h3>
-                        <p>Descripción breve del proyecto 3. Detalles sobre el proyecto y los resultados obtenidos.</p>
-                        <a href="#" class="btn-primary">Ver más</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Proyecto 4</h3>
-                        <p>Descripción breve del proyecto 4. Información relevante y objetivos alcanzados.</p>
-                        <a href="#" class="btn-primary">Ver más</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Proyecto 5</h3>
-                        <p>Descripción breve del proyecto 5. Datos importantes y logros obtenidos.</p>
-                        <a href="#" class="btn-primary">Ver más</a>
+                <div class="projects-container">
+                    <div class="projects-grid">
+                        <div class="project-card">
+                            <h3>Proyecto 1</h3>
+                            <p>Descripción breve del proyecto 1. Esto es una pequeña introducción al proyecto y lo que se logró.</p>
+                            <a href="#" class="btn-primary">Ver más</a>
+                        </div>
+                        <div class="project-card">
+                            <h3>Proyecto 2</h3>
+                            <p>Descripción breve del proyecto 2. Explicación sobre lo que este proyecto realizó y su impacto.</p>
+                            <a href="#" class="btn-primary">Ver más</a>
+                        </div>
+                        <div class="project-card">
+                            <h3>Proyecto 3</h3>
+                            <p>Descripción breve del proyecto 3. Detalles sobre el proyecto y los resultados obtenidos.</p>
+                            <a href="#" class="btn-primary">Ver más</a>
+                        </div>
+                        <div class="project-card">
+                            <h3>Proyecto 4</h3>
+                            <p>Descripción breve del proyecto 4. Información relevante y objetivos alcanzados.</p>
+                            <a href="#" class="btn-primary">Ver más</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        
         
         <section id="contact" class="section">
             <div class="contact-form-container">
